--- a/dbt_model_generation/profiles.yml
+++ b/dbt_model_generation/profiles.yml
@@ -2,10 +2,10 @@ dbt_model_generation:
   outputs:
     dev:
       account: DTJCYHT-WGB03396
-      database: DBT_MODEL_GENERATION
+      database: DEMO_DB
       password: Shajahan@snowflake_2002
       role: ACCOUNTADMIN
-      schema: DBT
+      schema: STAGING
       threads: 1
       type: snowflake
       user: SHAJAHAN
